detect keyboard presses

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       }
       return null;
     };
-
+    let W = 0;
+    let A = 0;
+    let S = 0;
+    let D = 0;
     const REGISTRY_QUERY_URL = 'http://127.0.0.1:9000/q';
     const SIDES = ['left', 'right'];
     const FLOOR_SIZE = 20;
@@ -2056,18 +2059,22 @@
         switch (e.keyCode) {
           case 87: { // W
             keys.up = false;
+            detectKeyboardUser('W');
             break;
           }
           case 83: { // S
             keys.down = false;
+            detectKeyboardUser('S');
             break;
           }
           case 65: { // A
             keys.left = false;
+            detectKeyboardUser('A');
             break;
           }
           case 68: { // D
             keys.right = false;
+            detectKeyboardUser('D');
             break;
           }
           case 69: { // E
@@ -2125,6 +2132,31 @@
 
       console.log('drop', e);
     });
+    function detectKeyboardUser(keyPress){
+          switch(keyPress) {
+            case 'W':
+              W++;
+              break;
+            case 'A':
+              A++;
+              break;
+            case 'S':
+              S++;
+              break;
+            case 'D':
+              D++;
+              break;
+        }
+        if(W > 3 || A > 3 || S > 3 || D > 3){
+            console.log('Keyboard Detected');
+          return true;
+        }
+        else{
+            console.log('W:' +  W, 'A:' + A, 'S:' + S, 'D:' + D);
+          return false;
+
+        }
+    }
   </script>
 </body>
 </html>
